# plr

./: .travis.yml  Makefile  Solution.pm.R  _meson.build  after_build.sh  after_test.sh  appveyor.yml  appveyor.yml.MISSING  archive_script.sh  build_script.sh  buildpgthenstop_script.sh  changelog.md  clean_pgsql_sln.bsh  clean_pgsql_sln.sh  init.sh  install.md  meson.build  meson.build_OUT_OF_PLACE_WORKS  meson.options  meson.options.txt  meson_options.txt_OUT_OF_PLACE_WORKS  meson_options.txt_postgres_root_additions  meson_options.txt_root_additions  msvc.13.diff  msvc.diff.R  msvc.diff.bat  msvc.master.202104.diff  msvc.pg.13._try2.diff  msvc.pg.13._try4.diff  msvc.pg.13._try5.diff  msvc.pg.13._try6.diff  msvc.pg.13.diff  pg_conversion.c  pg_rsupport.c  pg_userfuncs.c  pggithubbincachefailingfound.sh  plr--8.4.8--8.4.8.1.sql  plr--8.4.8.2--8.4.8.3.sql  plr--8.4.8.3--8.4.8.4.sql  plr--8.4.8.4--8.4.8.5.sql  (+6 more)
.github/workflows/: ____schedule.yml____  build.yml  buildPLR.yml  buildPLRschedule.yml  build_NIX._LEFT_OFF_archive_pg_LATE_so_I_can_get_the_pgversion  build_NIX._LEFT_OFF_next_TRY_simple_Tests_using_githubactionstes  build_NIX._WORK_IN_PROGRESS  build_NIX.yml  schedule.yml
expected/: plr.out  plr_transaction.out
sql/: plr.sql  plr_transaction.sql
